--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -181,7 +181,7 @@
   /* *************************** GRID */
   .tiles {
     margin: 0 2px 11%;
-    padding-top: 8%;
+    padding: 8% 0;
   }
   .tiles .tile, 
   .tiles .tile a, 
